tests/negative/undef_var.def
// Unit test for reporting an error of an undefined variable.

decl foo (i32) -> void;

def bar () -> void
begin
    foo(baz);
end
